dynamic mentors add

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body></body>
+    <script src="data/mentors.js"></script>
     <script src="build.js"></script>
 </html>
