added some small contents in html header

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
    crossorigin=""/>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body></body>
+    <body>
+        <header>
+            <h1>Firefox Add-ons developer mentors map</h1>
+            <p>
+                You can find the mentors either in the map or just search them in the table provided below.
+            </p>    
+        </header>
+        
+    </body>
     <script src="data/mentors.js"></script>
     <script src="build.js"></script>
 </html>
