Adding Content Styling

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <h1>Firefox Add-ons developer mentors map</h1>
-            <p>
+            <p id="headerContent">
                 You can find the mentors either in the map or just search them in the table provided below.
             </p>    
         </header>
