Adding the Add-on logo to header

--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
    integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ=="
    crossorigin=""/>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Zilla+Slab" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
+            <img src="img/firefox_addon_160.png">
             <h1>Firefox Add-ons developer mentors map</h1>
             <p id="headerContent">
-                You can find the mentors either in the map or just search them in the table provided below.
+                <b>You can find the mentors either in the map or just search them in the table provided below.</b>
             </p>    
         </header>
         
