--- a/index.html
+++ b/index.html
@@ -5,16 +5,31 @@
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css"
    integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ=="
    crossorigin=""/>
-        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Concert+One|Roboto" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>
-            <h1>Firefox Add-ons developer mentors map</h1>
-            <p>
-                You can find the mentors either in the map or just search them in the table provided below.
-            </p>    
+    <header>
+	    
+    <div class="head_main">
+
+        <div id="logo">
+            <img src="img/logo.png">
+        </div>
+        <div id="mozhead">
+            <img src="img/moz.png">
+        </div>
+        <div id="headtext">
+	    <h2>Firefox Add-ons developer </h2>
+        <br>
+        <h1>Mentors map</h1>
+        <p>
+            You can find the mentors either in the map or just search them in the table provided below.
+        </p>
+        </div>
+    </div>    
         </header>
+
         
     </body>
     <script src="data/mentors.js"></script>
