--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
    crossorigin=""/>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
+        <title>Firefox Webextensions mentors and events</title>
+        <link rel="icon" type="image/x-icon" href="https://addons.cdn.mozilla.net/static/img/favicon.ico?b=5fa7d1f9-59ef6e72">
     </head>
     <body>
         <header>
